fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 body{
   background-color: #f8f8f8;
 }
@@ -80,8 +81,8 @@ p{
 /* Article page css*/
 .section2{
   background-color: #f8f8f8;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   
 }
 
@@ -93,6 +94,8 @@ p{
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 .card{
   width: 400px;
@@ -151,6 +154,7 @@ nav a{
 .section3{
   
 }
+
 .section3 p{
   font-size: 16px;
   text-align: justify;
